# k8s-cluster

./: .envrc.example  .gitignore  Justfile  LICENSE  README.md
.github/workflows/: ci.yaml  pulumi-deploy.yml
apps/valheim-world-1/base/: deployment.yaml  kustomization.yaml  namespace.yaml  pvc.yaml  service.yaml  serviceaccount.yaml
apps/valheim/base/: deployment.yaml  kustomization.yaml  namespace.yaml  pvc.yaml  secret.yaml  (+1 more)
argocd-apps/: aws-ccm.yaml  cilium.yaml  valheim.yaml
argocd/apps/: appset.yaml  infrastructure.yaml  projects.yaml  root.yaml  valheim.yaml
argocd/projects/: valheim.yaml
docs/: architecture.md  decisions.md  known-limitations.md  neovim-setup.md  runbook.md
infrastructure/argo-cd/: values.yaml
infrastructure/aws-cloud-controller-manager/: rbac.yaml
infrastructure/cilium/: valheim-network-policy.yaml  values.yaml
infrastructure/ebs-csi/: values.yaml
infrastructure/envoy-gateway/: values.yaml
lambda/eip-reattach/: handler.py
pulumi/components/: __init__.py  dlm_snapshot.py  github_actions_oidc.py  iam.py  lambda_eip.py  network.py  nlb.py  nodes.py  security_groups.py  talosconfig_sync.py
pulumi/stacks/prod/: Pulumi.prod.yaml  Pulumi.prod.yaml.template  Pulumi.yaml  __main__.py  pyproject.toml  userdata.b64  userdata.yaml
scripts/: cluster-bootstrap.sh  ec2-state.sh  setup-tools.sh  show-costs.sh
talos/: talconfig.yaml  talconfig.yaml.template  talsecret.yaml
talos/patches/: cp-common.yaml  cp.yaml  worker-common.yaml  worker.yaml
talos/scripts/: bootstrap.sh  import-ami.sh  userdata-cp.sh  userdata-worker.sh
(+2 files in other folders)
